
[TestComment/snapshot_GET_/comment/37176230_with_a_succesful_response - 1]
http.Header{
    "Cache-Control": {"max-age=0"},
    "Content-Type":  {"text/html"},
    "Etag":          {"W/\"20-ef36c2a68197b48e8a131a230b90491dd89747c6\""},
}
int(200)
<title>
 Hackernews
</title>
<meta charset="UTF-8">
<meta name="description" content="Hackernews example app in htmx and Go" lang="en">
<link rel="stylesheet" href="/assets/main.css">
<link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
<script src="https://unpkg.com/htmx.org@1.9.4" integrity="sha384-zUfuhFKKZCbHTY6aRR46gxiqszMk5tcHjsVFxnUo8VMus4kHGVdIYVbOYYNlKmHV" crossorigin="anonymous">
</script>
<script src="https://unpkg.com/ulid@2.3.0/dist/index.umd.js">
</script>
<script src="/assets/scripts.js">
</script>
<main>
 <header class="topBar">
  <a class="logo" href="/">
   <img src="/assets/y18.gif">
   <span class="logo-caption">
    Hacker News
   </span>
  </a>
 </header>
 <section class="content">
  <article class="comment expanded">
   <div class="comment-body">
    The link seems to be Slashdotted into oblivion.
   </div>
   <footer>
    <span>
     CapitalistCartr
    </span>
    <span data-timestamp="">
     1692369360
    </span>
   </footer>
   <section class="comments">
    <article class="comment" hx-get="/parts/comment/42" hx-trigger="revealed" hx-swap="outerHTML">
     <p>
     </p>
     <div class="skeleton" style="width: 60%">
     </div>
     <p>
     </p>
     <p>
     </p>
     <div class="skeleton" style="width: 70%">
     </div>
     <p>
     </p>
     <p>
     </p>
     <div class="skeleton" style="width: 50%">
     </div>
     <p>
     </p>
     <footer>
      <div class="skeleton" style="width: 40%">
      </div>
     </footer>
    </article>
    <article class="comment" hx-get="/parts/comment/24" hx-trigger="revealed" hx-swap="outerHTML">
     <p>
     </p>
     <div class="skeleton" style="width: 60%">
     </div>
     <p>
     </p>
     <p>
     </p>
     <div class="skeleton" style="width: 70%">
     </div>
     <p>
     </p>
     <p>
     </p>
     <div class="skeleton" style="width: 50%">
     </div>
     <p>
     </p>
     <footer>
      <div class="skeleton" style="width: 40%">
      </div>
     </footer>
    </article>
   </section>
  </article>
 </section>
</main>

---

[TestComment/snapshot_GET_/parts/comment/37176230_with_a_succesful_response - 1]
http.Header{
    "Cache-Control": {"max-age=0"},
    "Content-Type":  {"text/html"},
    "Etag":          {"W/\"20-ef36c2a68197b48e8a131a230b90491dd89747c6\""},
}
int(200)
<article class="comment expanded">
 <div class="comment-body">
  The link seems to be Slashdotted into oblivion.
 </div>
 <footer>
  <span>
   CapitalistCartr
  </span>
  <span data-timestamp="">
   1692369360
  </span>
  <a href="/comment/37176230">
   2 answers
  </a>
 </footer>
</article>

---
